--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,10 +4,13 @@
     "target": "ES2022",
     "lib": ["ES2023"],
     "module": "ESNext",
+    "moduleResolution": "Bundler",
     "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"],
+    },
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
